Cambios menores sobre colores
Agregado 'index', 'login' y 'usuario' en la clase 'nav-link' de cada link en el header que lleva a cada una de las plantillas. Para que el color se mantega activo mientras esta en la plantilla.

--- a/proyecto_web/proyecto_web/plantillas/login.html
+++ b/proyecto_web/proyecto_web/plantillas/login.html
@@ -81,7 +81,7 @@
                             <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
+              <a class="nav-link login px-3" href="../plantillas/login.html">Iniciar Sesion</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-3" href="../plantillas/usuario.html">Usuario</a>
