--- a/proyecto_web/proyecto_web/index.htm
+++ b/proyecto_web/proyecto_web/index.htm
@@ -53,10 +53,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link px-3" href="#">Inicio</a>
+              <a class="nav-link index px-3" href="#">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <select class="select-menu mx-3 my-1">
