--- a/proyecto_web/proyecto_web/plantillas/usuario.html
+++ b/proyecto_web/proyecto_web/plantillas/usuario.html
@@ -85,7 +85,7 @@
                             <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="../plantillas/usuario.html">Usuario</a>
+                            <a class="nav-link usuario px-3" href="../plantillas/usuario.html">Usuario</a>
                         </li>
                     </ul>
 
