--- a/proyecto_web/proyecto_web/plantillas/login.html
+++ b/proyecto_web/proyecto_web/plantillas/login.html
@@ -51,10 +51,10 @@
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link index px-3" href="../index.htm">Inicio</a>
+              <a class="nav-link  px-3" href="../index.htm">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
+              <a class="nav-link index px-3" href="../plantillas/login.html">Iniciar Sesion</a>
             </li>
           </ul>
 
