--- a/proyecto_web/proyecto_web/plantillas/promociones.html
+++ b/proyecto_web/proyecto_web/plantillas/promociones.html
@@ -72,7 +72,7 @@
               <a class="nav-link px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link promociones px-3" href="../plantillas/promociones.html">Promociones</a>
+              <a class="nav-link index px-3" href="../plantillas/promociones.html">Promociones</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
