--- a/proyecto_web/proyecto_web/plantillas/quienesSomos.html
+++ b/proyecto_web/proyecto_web/plantillas/quienesSomos.html
@@ -69,7 +69,7 @@
               <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link quienesSomos px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
+              <a class="nav-link index px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
