--- a/proyecto_web/proyecto_web/plantillas/contacto.html
+++ b/proyecto_web/proyecto_web/plantillas/contacto.html
@@ -121,7 +121,7 @@
               </div>
               <div class="mb-4">
                 <label for="mensaje" class="form-label fw-semibold">Mensaje</label>
-                <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..."
+                <textarea style="resize: none;" class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..."
                   required></textarea>
               </div>
               <div class="col-12 d-grid mt-3">
