vinculos a las plantillas de turismo

--- a/proyecto_web/index.htm
+++ b/proyecto_web/index.htm
@@ -143,10 +143,6 @@
       </div>
     </section>
 
-\
-
-
-
     <section class="mb-5">
       <h2 class="text-center mb-4 fw-bold">Tipos de Turismo</h2>
       <div class="row g-4">
@@ -161,7 +157,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Turismo Urbano</h5>
-              <a href="#" style="text-decoration: none;">
+              <a href="./plantillas/urbano.html" style="text-decoration: none;">
                 <p class="card-text text-success">Ver mas</p>
               </a>
 
@@ -181,7 +177,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Turismo Rural</h5>
-              <a href="#" style="text-decoration: none;">
+              <a href="./plantillas/rural.html" style="text-decoration: none;">
                 <p class="card-text text-success">Ver mas</p>
               </a>
             </div>
@@ -199,7 +195,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Turismo en Lagos</h5>
-              <a href="#" style="text-decoration: none;">
+              <a href="./plantillas/lagos.html" style="text-decoration: none;">
                 <p class="card-text text-success">Ver mas</p>
               </a>
               </div>
@@ -217,7 +213,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Turismo en Playas</h5>
-              <a href="#" style="text-decoration: none;">
+              <a href="./plantillas/playas.html" style="text-decoration: none;">
                 <p class="card-text text-success">Ver mas</p>
               </a>
               </div>
@@ -235,7 +231,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Turismo en Montañas</h5>
-              <a href="#" style="text-decoration: none;">
+              <a href="./plantillas/montanas.html" style="text-decoration: none;">
                 <p class="card-text text-success">Ver mas</p>
               </a>
               </div>
