paginas Quienes Somos y poner banners a cada una de las paginas

--- a/proyecto_web/plantillas/lagos.html
+++ b/proyecto_web/plantillas/lagos.html
@@ -10,6 +10,16 @@
     <!-- Estilos CSS -->
     <link href="../css/style.css" rel="stylesheet" />
 </head>
+<style>
+    .banner {
+  background-image: url('../images/bannerLagos.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 60vh;
+  position: relative;
+  width: 100%;
+}
+</style>
 <body>
     
     <!-- Header -->
@@ -88,7 +98,7 @@
     <div class="banner-overlay"></div>
     <div class="container text-white text-center banner-content">
       <p class="fs-4 mb-1">Explora El Salvador</p>
-      <h2 class="display-4 fw-bold mb-4">Descubre paisajes <br>naturales únicos</h2>
+      <h2 class="display-4 fw-bold mb-4">Turismo en<br>Lagos</h2>
     </div>
   </section>
 
