--- a/proyecto_web/plantillas/reservas.html
+++ b/proyecto_web/plantillas/reservas.html
@@ -90,6 +90,17 @@
     </nav>
   </header>
 
+      <!-- Banner -->
+    <section class="banner d-flex align-items-center">
+      <div class="banner-overlay"></div>
+      <div class="container text-white text-center banner-content">
+        <p class="fs-4 mb-1">Explora El Salvador</p>
+        <h2 class="display-4 fw-bold mb-4">
+          Reservando tu<br />próxima escapada
+        </h2>
+      </div>
+    </section>
+    
   <!-- Main Content -->
   <!-- Inicio de elementos de reservas -->
   <main class="container my-5">
