--- a/proyecto_web/plantillas/quienesSomos.html
+++ b/proyecto_web/plantillas/quienesSomos.html
@@ -1,139 +1,352 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>¿Quiénes Somos?</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <!-- Iconos Boxicons -->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <!-- Estilos CSS -->
     <link href="../css/style.css" rel="stylesheet" />
-</head>
-<body>
-    
+    <link href="../css/styleQuienes.css" rel="stylesheet" />
+
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <!-- Header -->
-  <header>
-    <div class="container-fluid bg-light py-2 border-bottom">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-4">
-            <div class="d-flex align-items-center">
-              <a href="../index.htm">
-                <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-header">
-              </a>
-              <!-- Icono de llamada eliminado xd -->
+    <header>
+      <div class="container-fluid bg-light py-2 border-bottom">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-4">
+              <div class="d-flex align-items-center">
+                <a href="../index.htm">
+                  <img
+                    src="../logo/logo.png"
+                    alt="Logo Turismo Salvadoreño"
+                    class="img-header"
+                  />
+                </a>
+                <!-- Icono de llamada eliminado xd -->
+              </div>
+            </div>
+
+            <div class="col-md-4 text-center">
+              <div class="d-flex align-items-center justify-content-center">
+                <i class="bx bx-globe fs-2 text-primary me-2"></i>
+                <h1 class="m-0 fs-3 fw-bold">
+                  <a href="#" class="text-decoration-none">Turismo SV</a>
+                </h1>
+              </div>
             </div>
           </div>
-
-          <div class="col-md-4 text-center">
-            <div class="d-flex align-items-center justify-content-center">
-              <i class="bx bx-globe fs-2 text-primary me-2"></i>
-              <h1 class="m-0 fs-3 fw-bold"><a href="#" class="text-decoration-none">Turismo SV</a></h1>
-            </div>
-          </div>
-
         </div>
       </div>
-    </div>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
-      <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
+        <div class="container">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link px-3" href="../index.htm">Inicio</a>
-            </li>
-            <li class="nav-item dropdown">
-              <select class="select-menu mx-3 my-1">
-                <option value="">TURISMO</option>
-                <option value="urbano">Urbano</option>
-                <option value="playas">Playas</option>
-                <option value="lagos">Lagos</option>
-                <option value="montanas">Montañas</option>
-              </select>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link index px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
-            </li>
+          <div
+            class="collapse navbar-collapse menu"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link px-3" href="../index.htm">Inicio</a>
+              </li>
+              <li class="nav-item dropdown">
+                <select class="select-menu mx-3 my-1">
+                  <option value="">TURISMO</option>
+                  <option value="urbano">Urbano</option>
+                  <option value="playas">Playas</option>
+                  <option value="lagos">Lagos</option>
+                  <option value="montanas">Montañas</option>
+                </select>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link px-3" href="../plantillas/resenas.html"
+                  >Reseñas</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link px-3" href="../plantillas/reservas.html"
+                  >Reservas</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link px-3" href="../plantillas/contacto.html"
+                  >Contacto</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link index px-3"
+                  href="../plantillas/quienesSomos.html"
+                  >¿Quiénes Somos?</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link px-3" href="../plantillas/promociones.html"
+                  >Promociones</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link px-3" href="../plantillas/login.html"
+                  >Iniciar Sesion</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Banner -->
+    <section class="banner d-flex align-items-center">
+      <div class="banner-overlay"></div>
+      <div class="container text-white text-center banner-content">
+        <p class="fs-4 mb-1">Explora El Salvador</p>
+        <h2 class="display-4 fw-bold mb-4">
+          Conociendo nuestro<br />propósito
+        </h2>
+      </div>
+    </section>
+
+    <!-- Quienes Somos -->
+    <div class="seccion-empresa">
+      <h2 class="titulo-empresa">¿Quiénes Somos?</h2>
+      <p class="descripcion-empresa">
+        Somos una empresa salvadoreña especializada en la reserva de excursiones
+        turísticas hacia los destinos más fascinantes de nuestro país. Ofrecemos
+        experiencias únicas en zonas urbanas, rurales, lagos, playas y montañas,
+        conectando a los viajeros con la riqueza natural, cultural y humana de
+        El Salvador.
+        <br />
+        <br />
+        Nos apasiona mostrar la diversidad de nuestro territorio: desde el
+        encanto de los pueblos rurales y tradiciones ancestrales, hasta la
+        energía vibrante de las ciudades, la serenidad de nuestros lagos, la
+        belleza de las playas y la majestuosidad de nuestras montañas. Ya sea
+        que busques aventura, descanso, cultura o contacto con la naturaleza,
+        diseñamos cada excursión para que vivas una experiencia segura,
+        auténtica e inolvidable.
+      </p>
+
+      <div class="bloques-empresa">
+        <div class="bloque">
+          <h3>Misión</h3>
+          <p>
+            Facilitar el acceso a experiencias turísticas auténticas en El
+            Salvador, promoviendo el turismo sostenible, la economía local y el
+            amor por nuestras riquezas naturales y culturales.
+          </p>
+        </div>
+
+        <div class="bloque">
+          <h3>Visión</h3>
+          <p>
+            Ser la plataforma líder de reservas de excursiones en El Salvador,
+            reconocida por su compromiso con la calidad, la seguridad y la
+            conexión entre personas y naturaleza.
+          </p>
+        </div>
+
+        <div class="bloque">
+          <h3>Valores</h3>
+          <ul>
+            <li>Pasión por El Salvador</li>
+            <li>Excelencia en el servicio</li>
+            <li>Transparencia y honestidad</li>
+            <li>Diversión con responsabilidad</li>
+            <li>Trabajo en equipo</li>
           </ul>
         </div>
       </div>
-    </nav>
-  </header>
+      <br /><br />
+      <h2 class="titulo-empresa">Nuestra Historia</h2>
+      <p class="descripcion-empresa">
+        Nacimos con un sueño: hacer que más personas, tanto salvadoreños como
+        extranjeros, conozcan y disfruten las maravillas que esconde cada rincón
+        de El Salvador. Detectamos la necesidad de una forma confiable y
+        organizada de reservar excursiones, y decidimos crear una plataforma que
+        conecte fácilmente a los aventureros con experiencias inolvidables.
+      </p>
 
+      <h2 class="titulo-empresa">Nuestro Equipo</h2>
 
-    <!-- Footer -->
-<footer class="bg-dark text-white pt-5 pb-4 shadow-lg">
-  <div class="container">
-    <div class="row text-center text-md-start align-items-center">
-      <!-- Logo -->
-      <div class="col-md-3 mb-4">
-        <a href="../index.htm">
-          <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-width: 150px;">
-        </a>
-      </div>
-
-      <!-- Sobre Nosotros -->
-      <div class="col-md-4 mb-4">
-        <h5 class="fw-bold text-uppercase">Sobre Nosotros</h5>
-        <p class="text-white-50 mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-        <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-      </div>
-
-      <!-- Redes Sociales -->
-      <div class="col-md-5 mb-4">
-        <h5 class="fw-bold text-uppercase">Síguenos</h5>
-        <div class="d-flex justify-content-center justify-content-md-start gap-3 mt-2 fs-4">
-          <a href="#" class="text-white hover-icon"><i class='bx bxl-facebook'></i></a>
-          <a href="#" class="text-white hover-icon"><i class='bx bxl-instagram'></i></a>
-          <a href="#" class="text-white hover-icon"><i class='bx bxl-twitter'></i></a>
-          <a href="#" class="text-white hover-icon"><i class='bx bxl-youtube'></i></a>
-          <a href="#" class="text-white hover-icon"><i class='bx bxs-envelope'></i></a>
-          <a href="#" class="text-white hover-icon"><i class='bx bxl-whatsapp'></i></a>
-        </div>
-        <div class="d-flex justify-content-center justify-content-md-start align-items-center mt-3">
-          <i class="bx bx-phone-call fs-4 text-success me-2 text-white"></i>
-          <div class="text-start">
-            <div class="text-white small">Mayor información</div>
-            <div class="fw-bold text-white">+503 2258-5505</div>
+      <section class="equipo">
+        <div class="card a">
+          <img src="../images/persona1.png" alt="Foto de Carlos" />
+          <h3>Carlos Alfaro</h3>
+          <p class="puesto">Desarrollador de Software</p>
+          <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
+
+        <div class="card b">
+          <img src="../images/persona3.png" alt="Foto de Yanci" />
+          <h3>Yanci Gonzales</h3>
+          <p class="puesto">Desarrollador de Software</p>
+          <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <div class="card c">
+          <img src="../images/persona2.png" alt="Foto de Ruth" />
+          <h3>Ruth Vaquerano</h3>
+          <p class="puesto">Desarrollador de Software</p>
+          <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <div class="card d">
+          <img src="../images/persona4.png" alt="Foto de Vladi" />
+          <h3>Vladimir Ramos</h3>
+          <p class="puesto">Desarrollador de Software</p>
+          <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <div class="card e">
+          <img src="../images/persona5.png" alt="Foto de Emir" />
+          <h3>Emir Alvarado</h3>
+          <p class="puesto">Desarrollador de Software</p>
+          <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <div class="card f">
+          <img src="../images/persona6.png" alt="Foto de Danilo" />
+          <h3>Danilo Lopez</h3>
+          <p class="puesto">Desarrollador de Software</p>
+          <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white pt-5 pb-4 shadow-lg">
+      <div class="container">
+        <div class="row text-center text-md-start align-items-center">
+          <!-- Logo -->
+          <div class="col-md-3 mb-4">
+            <a href="../index.htm">
+              <img
+                src="../logo/logo.png"
+                alt="Logo Turismo Salvadoreño"
+                class="img-fluid"
+                style="max-width: 150px"
+              />
+            </a>
+          </div>
+
+          <!-- Sobre Nosotros -->
+          <div class="col-md-4 mb-4">
+            <h5 class="fw-bold text-uppercase">Sobre Nosotros</h5>
+            <p class="text-white-50 mb-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
+              ipsa?
+            </p>
+            <p class="text-white-50">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
+              ipsa?
+            </p>
+          </div>
+
+          <!-- Redes Sociales -->
+          <div class="col-md-5 mb-4">
+            <h5 class="fw-bold text-uppercase">Síguenos</h5>
+            <div
+              class="d-flex justify-content-center justify-content-md-start gap-3 mt-2 fs-4"
+            >
+              <a href="#" class="text-white hover-icon"
+                ><i class="bx bxl-facebook"></i
+              ></a>
+              <a href="#" class="text-white hover-icon"
+                ><i class="bx bxl-instagram"></i
+              ></a>
+              <a href="#" class="text-white hover-icon"
+                ><i class="bx bxl-twitter"></i
+              ></a>
+              <a href="#" class="text-white hover-icon"
+                ><i class="bx bxl-youtube"></i
+              ></a>
+              <a href="#" class="text-white hover-icon"
+                ><i class="bx bxs-envelope"></i
+              ></a>
+              <a href="#" class="text-white hover-icon"
+                ><i class="bx bxl-whatsapp"></i
+              ></a>
+            </div>
+            <div
+              class="d-flex justify-content-center justify-content-md-start align-items-center mt-3"
+            >
+              <i class="bx bx-phone-call fs-4 text-success me-2 text-white"></i>
+              <div class="text-start">
+                <div class="text-white small">Mayor información</div>
+                <div class="fw-bold text-white">+503 2258-5505</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <hr class="border-secondary" />
+        <!-- Derechos -->
+        <div class="text-center small text-muted">
+          &copy; 2025 <strong>Turismo Salvadoreño</strong> - Todos los Derechos
+          Reservados.
+        </div>
       </div>
-    </div>
+    </footer>
 
-    <hr class="border-secondary">
-    <!-- Derechos -->
-    <div class="text-center small text-muted">
-      &copy; 2025 <strong>Turismo Salvadoreño</strong> - Todos los Derechos Reservados.
-    </div>
-  </div>
-</footer>
+    <!-- Bootstrap JS -->
+    <script src="../js/script.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Bootstrap JS -->
-  <script src="../js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  
-</body>
+    <!-- Agrega Font Awesome para los iconos sociales -->
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
