--- a/proyecto_web/plantillas/playas.html
+++ b/proyecto_web/plantillas/playas.html
@@ -57,7 +57,7 @@
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link index px-3" href="#">Inicio</a>
+              <a class="nav-link index px-3" href="../index.htm">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <select class="select-menu mx-3 my-1" onchange="location = this.value;">
