--- a/proyecto_web/plantillas/urbano.html
+++ b/proyecto_web/plantillas/urbano.html
@@ -32,7 +32,6 @@
               <a href="../index.htm" >
                 <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-header">
               </a>
-              <!-- Icono de llamada eliminado xd -->
             </div>
           </div>
 
@@ -57,7 +56,7 @@
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link index px-3" href="#">Inicio</a>
+              <a class="nav-link index px-3" href="../index.htm">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <select class="select-menu mx-3 my-1" onchange="location = this.value;">
