Ahora se puede ver la pagina sin necesidad de iniciar sesion

--- a/proyecto_web/plantillas/usuario.html
+++ b/proyecto_web/plantillas/usuario.html
@@ -134,8 +134,7 @@
                     style="width: 120px; height: 120px; object-fit: cover;" />
                 <p class="mb-2"><strong>Nombre de usuario:</strong><br><span id="usernameInfo">-</span></p>
                 <p class="mb-4"><strong>Correo:</strong> <span id="emailInfo">-</span></p>
-                <button onclick="logout()" class="btn btn-danger">Cerrar sesión</button>
-                <!-- Boton para cerrar sesion -->
+                <button onclick="cerrarSesion()" class="btn btn-danger">Cerrar sesión</button>
             </div>
         </div>
     </div>
