Desarrollo de paginas Urbano y Rural, creacion de Style para esas paginas y agregacion de imagenes en carpeta imagenes

--- a/proyecto_web/plantillas/rural.html
+++ b/proyecto_web/plantillas/rural.html
@@ -6,21 +6,14 @@
     <title>Turismo Rural</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos Boxicons -->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <!-- Estilos CSS -->
-    <link href="../css/style.css" rel="stylesheet" />
-</head>
-<style>
-    .banner {
-  background-image: url('../images/bannerRural.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 60vh;
-  position: relative;
-  width: 100%;
-}
-</style>
+    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
+
+    <!-- Estilos CSS -->
+    <link href="../css/SkyleUrbanoRural.css" rel="stylesheet" />
+</head>
+<body>
 <body>
     
   <!-- Header -->
@@ -123,7 +116,257 @@
   </section>
 
   <!-- Main Content -->
-   <br>
+  <div class="container-fluid py-5">
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-lg-6" style="min-height: 700px;">
+          <div class="position-relative h-100">
+            <img class="position-absolute w-100 h-100" src="../images/tobogan.png" style="object-fit: cover;">
+          </div>
+        </div>
+        <div class="col-lg-6 pt-5 pb-lg-5">
+          <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
+            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">El Salvador</h6>
+            <h1 class="mb-3">Turismo Rural que no debes perderte</h1>
+            <p>El Salvador es mucho más que playas y ciudades: sus zonas rurales esconden paisajes 
+              impresionantes, comunidades acogedoras y experiencias inolvidables. Si buscas escapar del 
+              ruido, respirar aire puro y conocer la cultura salvadoreña en su forma más auténtica, el turismo rural es para ti..</p>
+            <div class="row mb-4">
+              <div class="col-6">
+                <img class="img-fluid" src="../images/albania.jpg" width="230px">
+              </div>
+              <div class="col-6">
+                <img class="img-fluid" src="../images/volcan.jpg" width="230px">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Feature Start -->
+  <div class="container-fluid pb-5">
+    <div class="container pb-5">
+      <div class="row">
+        <div class="col-md-4">
+  <div class="d-flex mb-4 mb-lg-0">
+    <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-success"
+     style="height: 100px; width: 100px;">
+  <i class="fa fa-2x fa-money-check-alt text-white"></i>
+</div>
+    <div class="d-flex flex-column ms-3">
+      <h5 class="">Turismos Accesibles</h5>
+      <p class="m-0">Diversión rural al alcance de todos: diviertete sin gastar de más.</p>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="col-md-4">
+  <div class="d-flex mb-4 mb-lg-0">
+    <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-success"
+     style="height: 100px; width: 100px;">
+  <i class="fa fa-2x fa-award text-white"></i>
+</div>
+
+    <div class="d-flex flex-column ms-3">
+      <h5 class="">Mejores Servicios</h5>
+      <p class="m-0">Los mejores destinos rurales del país,calidad, experiencia asegurada</p>
+    </div>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="d-flex mb-4 mb-lg-0">
+    <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-success"
+     style="height: 100px; width: 100px;">
+  <i class="fa fa-2x fa-globe text-white"></i>
+</div>
+    <div class="d-flex flex-column ms-3">
+      <h5 class="">Cobertura Nacional</h5>
+      <p class="m-0">Descubre lugares fascinantes en los 14 departamentos, listos para vivir experiencias únicas.</p>
+    </div>
+  </div>
+</div>
+
+      </div>
+    </div>
+  </div>
+  <!-- Feature End -->
+
+
+  <!-- Destination Start -->
+  <div class="container-fluid py-5">
+    <div class="container pt-5 pb-3">
+      <div class="text-center mb-3 pb-3">
+        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Destinos</h6>
+        <h1>Destinos que debes explorar</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/palma.jpg" alt="">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Chalatenango</h5>
+              <span>La palma</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/perquin.jpg" alt="200">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Morazan</h5>
+              <span>Perquin</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/imposible.jpg" alt="200">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Ahuachapan</h5>
+              <span>Parque El Imposible</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/Cinquera.jpg" alt="">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Cabañas</h5>
+              <span>Cinquera</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/fureza.jpg" alt="">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">La libertad</h5>
+              <span>Zoologico Furesa</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/juayua.jpg" alt="">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Sonsonate</h5>
+              <span>Juayua</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+ 
+  <!-- Service Start -->
+  <div class="container-fluid py-5">
+    <div class="container pt-5 pb-3">
+      <div class="text-center mb-3 pb-3">
+        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Servicios</h6>
+        <h1>Servicios de Tours y Viajes</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="service-item bg-white text-center mb-2 py-5 px-4">
+            <i class="fa fa-2x fa-route mx-auto mb-4"></i>
+            <h5 class="mb-2">Guias de turismo</h5>
+            <p class="m-0">Los mejores guias turisticos calificados para brindarte la mejor experiencia en tu lugar seleccionado
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="service-item bg-white text-center mb-2 py-5 px-4">
+            <i class="fa fa-2x fa-ticket-alt mx-auto mb-4"></i>
+            <h5 class="mb-2">Ticket</h5>
+            <p class="m-0">Algunos sitios turísticos rurales, campos, laberintos o miradores especiales pueden requerir ticket para entrar. 
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="service-item bg-white text-center mb-2 py-5 px-4">
+            <i class="fa fa-2x fa-hotel mx-auto mb-4"></i>
+            <h5 class="mb-2">Hoteles para el alojamiento</h5>
+            <p class="m-0">Hoteles equipados para tu correcta estancia despues de visitar los turismos que te ofrece nuestro pais El Salvador
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Blog Start -->
+  <div class="container-fluid py-5">
+    <div class="container pt-5 pb-3">
+      <div class="text-center mb-3 pb-3">
+        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Ultimos Turismos</h6>
+        <h1>Los mas frecuentado</h1>
+      </div>
+      <div class="row pb-3">
+        <div class="col-lg-4 col-md-6 mb-4 pb-2">
+          <div class="blog-item">
+            <div class="position-relative">
+              <img class="img-fluid w-100" src="..//images/volcan.jpg" alt="">
+              <div class="blog-date">
+                <h6 class="font-weight-bold mb-n1">01</h6>
+                <small class="text-white text-uppercase">Enero</small>
+              </div>
+            </div>
+            <div class="bg-white p-4">
+              <div class="d-flex mb-2">
+                <a class="text-primary text-uppercase text-decoration-none" href="">Diego</a>
+                <span class="text-primary px-2">|</span>
+                <a class="text-primary text-uppercase text-decoration-none" href="">Exploro</a>
+              </div>
+              <a class="h5 m-0 text-decoration-none" href="">Realizo el recorrido del Volcan de Santa Ana</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4 pb-2">
+          <div class="blog-item">
+            <div class="position-relative">
+              <img class="img-fluid w-100" src="../images/pital.jpg" alt="">
+              <div class="blog-date">
+                <h6 class="font-weight-bold mb-n1">25</h6>
+                <small class="text-white text-uppercase">Febrero</small>
+              </div>
+            </div>
+            <div class="bg-white p-4">
+              <div class="d-flex mb-2">
+                <a class="text-primary text-uppercase text-decoration-none" href="">Pamela</a>
+                <span class="text-primary px-2">|</span>
+                <a class="text-primary text-uppercase text-decoration-none" href="">Exploro</a>
+              </div>
+              <a class="h5 m-0 text-decoration-none" href="">Un increible campamento en El Pital</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4 pb-2">
+          <div class="blog-item">
+            <div class="position-relative">
+              <img class="img-fluid w-100" src="../images/perquin.jpg" alt="">
+              <div class="blog-date">
+                <h6 class="font-weight-bold mb-n1">09</h6>
+                <small class="text-white text-uppercase">Marzo</small>
+              </div>
+            </div>
+            <div class="bg-white p-4">
+              <div class="d-flex mb-2">
+                <a class="text-primary text-uppercase text-decoration-none" href="">Adriana</a>
+                <span class="text-primary px-2">|</span>
+                <a class="text-primary text-uppercase text-decoration-none" href="">Exploro</a>
+              </div>
+              <a class="h5 m-0 text-decoration-none" href="">Hermosa vista en perquin la capital de la paz</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   
   
     <!-- Footer -->
