Correciones a paginas rural y urbano

--- a/proyecto_web/plantillas/rural.html
+++ b/proyecto_web/plantillas/rural.html
@@ -11,7 +11,7 @@
 
 
     <!-- Estilos CSS -->
-    <link href="../css/SkyleUrbanoRural.css" rel="stylesheet" />
+    <link href="../css/StyleUrbanoRural.css" rel="stylesheet" />
 </head>
 <body>
 <body>
