--- a/proyecto_web/plantillas/urbano.html
+++ b/proyecto_web/plantillas/urbano.html
@@ -6,12 +6,9 @@
     <title>Turismo Urbano</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos Boxicons -->
-    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-
-
     <!-- Estilos CSS -->
-    <link href="../css/SkyleUrbanoRural.css" rel="stylesheet" />
+    <link href="../css/StyleUrbanoRural.css" rel="stylesheet" />
 </head>
 <body>
     
@@ -336,7 +333,7 @@
             </div>
             <div class="bg-white p-4">
               <div class="d-flex mb-2">
-                <a class="text-primary text-uppercase text-decoration-none" href="">Ernesto</a>
+                <a class="text-primary text-uppercase text-decoration-none" href="">Ernersto</a>
                 <span class="text-primary px-2">|</span>
                 <a class="text-primary text-uppercase text-decoration-none" href="">Exploro</a>
               </div>
