Agregacion de imagenes en Urbano

--- a/proyecto_web/plantillas/urbano.html
+++ b/proyecto_web/plantillas/urbano.html
@@ -129,7 +129,7 @@
               nuevos.</p>
             <div class="row mb-4">
               <div class="col-6">
-                <img class="img-fluid" src="../images/TuriUrbano.jpeg" alt="">
+                <img class="img-fluid" src="../images/zonaRosa.jpeg" alt="">
               </div>
               <div class="col-6">
                 <img class="img-fluid" src="../images/Turi2.png" alt="">
