Cambios minimos en el footer

--- a/proyecto_web/plantillas/lagos.html
+++ b/proyecto_web/plantillas/lagos.html
@@ -136,11 +136,12 @@
       </div>
 
       <!-- Sobre Nosotros -->
-      <div class="col-md-4 mb-4">
-        <h5 class="fw-bold text-uppercase">Sobre Nosotros</h5>
-        <p class="text-white-50 mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-        <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-      </div>
+          <div class="col-md-4 mb-4">
+            <h5 class="fw-bold text-uppercase">Sobre Nosotros</h5>
+            <p class="text-white-50 mb-1" style="text-align: justify;">Somos una empresa salvadoreña especializada en la reserva de excursiones
+        turísticas hacia los destinos más fascinantes de nuestro país. </p>
+            <p class="text-white-50" style="text-align: justify;">Ofrecemos experiencias únicas en zonas urbanas, rurales, lagos, playas y montañas, conectando a los viajeros con la riqueza natural, cultural y humana de El Salvador.</p>
+          </div>
 
       <!-- Redes Sociales -->
       <div class="col-md-5 mb-4">
