Modifique las plantillas de reseña, montañas  lagos y tambien agregue imagnes qu necesitaba utilizar y el css de montañas y lagos

--- a/proyecto_web/plantillas/lagos.html
+++ b/proyecto_web/plantillas/lagos.html
@@ -9,6 +9,8 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <!-- Estilos CSS -->
     <link href="../css/style.css" rel="stylesheet" />
+    <link href="../css/styleLagos.css" rel="stylesheet" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <style>
@@ -122,8 +124,122 @@
   </section>
 
   <!-- Main Content -->
-   <br>
-  
+   <div class="container-fluid py-5">
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-lg-6" style="min-height: 700px;">
+          <div class="position-relative h-100">
+            <img class="position-absolute w-100 h-100" src="../images/LagoCoate.jpg" style="object-fit: cover;">
+          </div>
+        </div>
+        <div class="col-lg-6 pt-5 pb-lg-5">
+          <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
+            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">El Salvador</h6>
+            <h1 class="mb-3">Turismo en lagos que no debes perderte</h1>
+            <p>Los lagos de nuestro pais El Salvador son escenarios de belleza serena y pura, 
+              con aguas que varían en tonalidades desde el azul profundo hasta el turquesa, 
+              rodeados de vegetación y formaciones volcánicas que aportan un toque dramático y único. 
+              Además, muchos de estos lagos tienen un valor cultural y turístico, 
+              siendo destinos populares para turistas nacionales e internacionales que buscan disfrutar de la naturaleza y relajarse en un entorno espectacular.</p>
+            <div class="row mb-4">
+              <div class="col-6">
+                <img class="img-fluid" src="../images/LagoIlopango.jpg" alt="">
+              </div>
+              <div class="col-6">
+                <img class="img-fluid" src="../images/LagoGuija.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Actividades en lagos-->
+  <!-- Actividades -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Actividades</h6>
+      <h2>¿Qué puedes hacer en los lagos?</h2>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-water fs-1 text-info'></i>
+        <h5 class="mt-3">Paseos en lancha</h5>
+        <p>Disfruta recorridos tranquilos o emocionantes por los principales lagos del país.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-swim fs-1 text-primary'></i>
+        <h5 class="mt-3">Natación</h5>
+        <p>Báñate en aguas cristalinas rodeado de paisajes impresionantes.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-restaurant fs-1 text-danger'></i>
+        <h5 class="mt-3">Gastronomía</h5>
+        <p>Degusta platillos típicos como pescado frito, mojarras y mariscos frescos.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-camera fs-1 text-warning'></i>
+        <h5 class="mt-3">Fotografía</h5>
+        <p>Captura amaneceres, volcanes y aves en paisajes de postal.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+  <!-- Destination Start -->
+  <div class="container-fluid py-5">
+    <div class="container pt-5 pb-3">
+      <div class="text-center mb-3 pb-3">
+        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Destinos</h6>
+        <h1>Destinos que debes explorar</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/LagoCoate.jpg" alt="">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white"> Lago de Coatepeque</h5>
+              <span>Santa Ana</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/LagoIlopango.jpg" alt="200">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Lago de Ilopango</h5>
+              <span>San Salvador</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/LagoGuija.jpg" alt="200">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Lago Güija</h5>
+              <span>frontera entre Guatemala y El Salvador</span>
+            </a>
+          </div>
+        </div>
+
+        <!-- Historia y datos curiosos de lagos-->
+<section class="bg-light py-5">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Sabías que...</h6>
+      <h2>Curiosidades de nuestros lagos</h2>
+    </div>
+    <ul class="list-group list-group-flush bg-white shadow p-4 rounded">
+      <li class="list-group-item">🌋 El Lago de Ilopango se formó tras una gigantesca erupción volcánica hace más de 1,500 años.</li>
+      <li class="list-group-item">🌅 El Lago de Coatepeque cambia de color ocasionalmente, tornándose turquesa brillante.</li>
+      <li class="list-group-item">🐟 El Lago Güija es el hábitat de muchas especies endémicas de peces y aves.</li>
+    </ul>
+  </div>
+</section>
+
+ 
      <!-- Footer -->
 <footer class="bg-dark text-white pt-5 pb-4 shadow-lg">
   <div class="container">
