--- a/proyecto_web/plantillas/montanas.html
+++ b/proyecto_web/plantillas/montanas.html
@@ -9,6 +9,9 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <!-- Estilos CSS -->
     <link href="../css/style.css" rel="stylesheet" />
+    <link href="../css/StyleMontanas.css" rel="stylesheet" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
 </head>
 
 <style>
@@ -123,7 +126,132 @@
   </section>
 
   <!-- Main Content -->
-   <br>
+   <div class="container-fluid py-5">
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-lg-6" style="min-height: 700px;">
+          <div class="position-relative h-100">
+            <img class="position-absolute w-100 h-100" src="../images/cerroVerde.jpeg" style="object-fit: cover;">
+          </div>
+        </div>
+        <div class="col-lg-6 pt-5 pb-lg-5">
+          <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
+            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">El Salvador</h6>
+            <h1 class="mb-3">Turismo en montañas que no debes perderte</h1>
+            <p>Las montañas de nuestro pulgarcito de America (El Salvador) 
+              ofrecen paisajes impresionantes y senderos ideales para la aventura al aire libre. 
+              Rodeadas de vegetación y vistas panorámicas, son perfectas para quienes buscan conectarse con la naturaleza y disfrutar de un entorno tranquilo y refrescante.</p>
+            <div class="row mb-4">
+              <div class="col-6">
+                <img class="img-fluid" src="../images/CerroPital.jpg" alt="">
+              </div>
+              <div class="col-6">
+                <img class="img-fluid" src="../images/CerroJacinto.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Actividades -->
+<!-- Actividades en Montañas -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h6 class="text-success text-uppercase" style="letter-spacing: 5px;">Actividades</h6>
+      <h2>
+        ¿Qué puedes hacer en las montañas?
+      </h2>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-walk fs-1 text-success'></i>
+        <h5 class="mt-3">
+          Senderismo
+        </h5>
+        <p>Explora rutas ecológicas rodeadas de bosques, miradores y aire fresco.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-compass fs-1 text-warning'></i>
+        <h5 class="mt-3">
+          Camping
+        </h5>
+        <p>Acampa bajo las estrellas y disfruta de una noche en plena naturaleza.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-zoom-in fs-1 text-primary'></i>
+        <h5 class="mt-3">
+          Avistamiento
+        </h5>
+        <p>Observa aves, animales silvestres y flora nativa en su entorno natural.</p>
+      </div>
+      <div class="col-md-3 mb-4">
+        <i class='bx bx-landscape fs-1 text-info'></i>
+        <h5 class="mt-3">
+          Paisajismo
+        </h5>
+        <p>Relájate contemplando valles, cimas y niebla matutina desde las alturas.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+  <!-- Destination Start -->
+  <div class="container-fluid py-5">
+    <div class="container pt-5 pb-3">
+      <div class="text-center mb-3 pb-3">
+        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Destinos</h6>
+        <h1>Destinos que debes explorar</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/cerroVerde.jpeg" alt="">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white"> Cerro Verde</h5>
+              <span>Santa Ana</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/CerroPital.jpg" alt="200">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Cerro el Pital</h5>
+              <span> frontera entre El Salvador y Honduras</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="destination-item position-relative overflow-hidden mb-2">
+            <img class="img-fluid" src="../images/CerroJacinto.jpg" alt="200">
+            <a class="destination-overlay text-white text-decoration-none">
+              <h5 class="text-white">Cerro San Jacinto</h5>
+              <span>San Salvador</span>
+            </a>
+          </div>
+        </div>
+
+        <!-- Historia y datos curiosos: Cerros -->
+<section class="bg-light py-5">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h6 class="text-success text-uppercase" style="letter-spacing: 5px;">Sabías que...</h6>
+      <h2>Curiosidades de nuestras montañas</h2>
+    </div>
+    <ul class="list-group list-group-flush bg-white shadow p-4 rounded">
+      <li class="list-group-item">🌿 El Cerro Verde forma parte de un complejo volcánico y ofrece senderos entre bosques nublados y orquídeas silvestres.</li>
+      <li class="list-group-item">❄️ El Cerro El Pital es el punto más alto de El Salvador, donde incluso se han registrado temperaturas bajo cero.</li>
+      <li class="list-group-item">🚡 El Cerro San Jacinto tuvo el primer teleférico de Centroamérica, activo entre los años 70 y 80.</li>
+    </ul>
+  </div>
+</section>
+
   
     <!-- Footer -->
     <footer class="bg-dark text-white pt-5 pb-4 shadow-lg">
